docs/api/qiskit/0.39/qiskit.algorithms.TimeEvolutionResult.md
---
title: TimeEvolutionResult
description: API reference for qiskit.algorithms.TimeEvolutionResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.TimeEvolutionResult
---

# TimeEvolutionResult

<span id="qiskit.algorithms.TimeEvolutionResult" />

`TimeEvolutionResult(evolved_state, aux_ops_evaluated=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/time_evolvers/time_evolution_result.py "view source code")

Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

Class for holding time evolution result.

<span id="qiskit.algorithms.TimeEvolutionResult.evolved_state" />

### evolved\_state

An evolved quantum state.

**Type**

[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

<span id="qiskit.algorithms.TimeEvolutionResult.aux_ops_evaluated" />

### aux\_ops\_evaluated

Optional list of observables for which expected values on an evolved state are calculated. These values are in fact tuples formatted as (mean, standard deviation).

**Type**

ListOrDict\[tuple\[complex, complex]] | None

**Parameters**

*   **evolved\_state** – An evolved quantum state.
*   **aux\_ops\_evaluated** – Optional list of observables for which expected values on an evolved state are calculated. These values are in fact tuples formatted as (mean, standard deviation).

## Methods

### combine

<span id="qiskit.algorithms.TimeEvolutionResult.combine" />

`TimeEvolutionResult.combine(result)`

Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

**Raises**

**TypeError** – Argument is None

**Return type**

`None`

